[package]
name = "emqxctl"
version = "0.1.0"
edition = "2021"
description = "CLI for the EMQX Management REST API"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabled = "0.17"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util", "io-std"] }
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
